--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
